[gd_scene load_steps=10 format=3 uid="uid://7afng5y6tlyw"]

[ext_resource type="Script" uid="uid://bwoabfijcswms" path="res://Code/chest.gd" id="1_cjfl1"]
[ext_resource type="Material" uid="uid://bb5a5krai0jpw" path="res://Shaders/outline2.tres" id="2_dq33m"]
[ext_resource type="AudioStream" uid="uid://bc0ajevxuis8x" path="res://Assets/Audio/523755__lilmati__item-01.wav" id="3_bagqn"]
[ext_resource type="Texture2D" uid="uid://bgus2p2pujfdm" path="res://Assets/Sprites/chest_closed.png" id="3_dq33m"]
[ext_resource type="Texture2D" uid="uid://b3evrsel4w8us" path="res://Assets/Sprites/chest_open.png" id="4_j6qf6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pmguq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cjfl1"]
size = Vector2(21, 19.5)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_cjfl1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bagqn"]
size = Vector2(18, 11.5)

[node name="Chest" type="Area2D"]
z_index = 2
collision_layer = 2
collision_mask = 9
script = ExtResource("1_cjfl1")
outline_shader = ExtResource("2_dq33m")

[node name="closed" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_pmguq")
texture = ExtResource("3_dq33m")
region_rect = Rect2(56, 133, 16, 11)

[node name="opened" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -2.5)
texture = ExtResource("4_j6qf6")
region_rect = Rect2(72, 128, 16, 16)

[node name="InteractionZone" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.25)
shape = SubResource("RectangleShape2D_cjfl1")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bagqn")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_cjfl1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -1.25)
shape = SubResource("RectangleShape2D_bagqn")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
